--- a/build.gradle
+++ b/build.gradle
@@ -33,14 +33,14 @@ compileTestJava {
 }
 
 dependencies {
-    testImplementation 'com.codeborne:selenide:5.15.1'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+    compile 'org.aeonbits.owner:owner:1.0.12'
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
-
-    testImplementation 'io.qameta.allure:allure-selenide:2.13.7'
+    testImplementation 'com.codeborne:selenide:5.15.1',
+            'org.junit.jupiter:junit-jupiter-api:5.6.2',
+            'io.qameta.allure:allure-selenide:2.13.7'
 }
 
 test {
-    systemProperties = System.properties
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 }
